<resources>
    <string name="app_name">RxFlux</string>
    <string name="title_activity_logged_in">LoggedInActivity</string>

    <!-- Secret Cave introduce code   -->
    <string name="enter_code">Enter the secret code</string>

    <!-- Secret Cave public code options  -->
    <string name="code_1">A</string>
    <string name="code_2">B</string>
    <string name="code_3">C</string>

    <!-- Secret Cave internal code options  -->
    <string name="code_1_value">A</string>
    <string name="code_2_value">B</string>
    <string name="code_3_value">C</string>

    <string name="clear_code">CLEAR</string>

</resources>
